# pyannote-whisper-3.11.7

./: .gitignore  README.md  annotator.py  constants.py  prepare.py  pyproject.toml  uptake_utils.py
